# equipment-status-board

./: .env.example  .gitignore  404.html  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs.yml  release.yml
_bmad-output/brainstorming/: brainstorming-session-2026-02-03.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding-docker-deployment.md  1-2-user-authentication-system.md  1-3-user-account-provisioning-role-management.md  1-4-password-management.md  2-1-area-management.md  2-2-equipment-registry-crud.md  2-3-equipment-documentation-media.md  2-4-equipment-archiving-technician-permissions.md  3-1-repair-record-creation-data-model.md  3-2-repair-record-workflow-updates.md  3-3-repair-timeline-notes-photos.md  3-4-technician-repair-queue.md  3-5-staff-kanban-board.md  4-1-equipment-status-derivation-status-dashboard.md  4-2-kiosk-display.md  4-3-qr-code-equipment-pages-documentation.md  6-3-slack-status-bot.md  (+27 more)
administrators/: index.html
docs/: administrators.md  index.md  manual_testing.md  members.md  original_requirements_doc.md  staff.md  technicians.md
esb/: __init__.py  config.py  extensions.py
members/: index.html
original_requirements_doc/: index.html
scripts/: generate_screenshots.py
search/: search_index.json
staff/: index.html
technicians/: index.html
tests/: conftest.py  test_app.py  test_cli.py  test_compose.py
(+143 files in other folders)
